@@ -1,5 +1,9 @@
 2001-08-04  Ulrich Drepper  <drepper@redhat.com>
 
+	* elf/rtld.c: Correct use of __builtin_expect.
+
+	* elf/dl-close.c: Remove commented-out code.
+
 	* libio/genops.c (_IO_unbuffer_write): Force streams in narrow
 	orientation so that conversion modules aren't used anymore.
 	* malloc/set-freeres.c: Call _IO_cleanup before running subfreeres
